layout almost done & clicking working

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie clicker</title>
-    <link rel="icon" src="./images/">
-    <link rel="stylesheet" src="./style/index.css">
+    <link rel="icon" href="./images/cookie.png">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 <body>
-    <script type="module" src="./scripts/index.js"></script>
+    <div id="container">
+        <h1>Cookie clicker!</h1>
+        <h3 id="counter">You got no clicks :(</h3>
+        <img id="cookie" alt="the cookie" src="./images/cookie.png">
+        <script type="module" src="./scripts/index.js"></script>
+    </div>
 </body>
 </html>
