--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h3 id="counter">You got no clicks :(</h3>
         <img id="cookie" alt="the cookie" src="./images/cookie.png">
         <script type="module" src="./scripts/index.js"></script>
+        <p>Do you want to earn some money?</p>
+        <button id="sell-btn">Sell $</button>
     </div>
 </body>
 </html>
